# NDNF-pipeline

./: .gitignore  README.md  main.py  pyproject.toml  sandbox.py
Notebooks/: behavior.ipynb  marker_gene_hunt.ipynb
examples/: README.md  google_creds.example.json
ndnf_pipeline/: __init__.py  experiment.py  lab.py
ndnf_pipeline/ingest/: ingest_behavior.py  ingest_metadata.py
ndnf_pipeline/utils/: __init__.py  google_notebook.py  pipeline_tools.py
