[project]
name = "ndnf-pipeline"
version = "0.1.0"
description = "Shared DataJoint pipeline for the Neuronal Diversity in Network Function lab"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datajoint>=0.14.6",
    "google-api-python-client>=2.187.0",
    "graphviz>=0.21",
    "gspread>=6.2.1",
    "harp-python>=0.4.1",
    "matplotlib>=3.10.8",
    "oauth2client>=4.1.3",
    "pydotplus>=2.0.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {where = ["."], exclude = ["Notebooks*", "scripts*", "tests*"]}
